# tagbiljett

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  cron.sh  pyproject.toml
.github/workflows/: build-and-publish.yml  build-publish-release.yml  ghcr.yml  pypi.yml
tagbiljett/: __init__.py  __main__.py  tagbiljett.py
